--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 __pycache__/*
 geckodriver.log
+ratatype_bot_typewriter/__pycache__/ratatype_bot.cpython-39.pyc
+ratatype_bot_typewriter/driver/geckodriver
